--- a/views/user/auth-login.html
+++ b/views/user/auth-login.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
     
-<!-- Mirrored from mannatthemes.com/dastone/default/auth-register.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 15 Oct 2021 12:05:33 GMT -->
+<!-- Mirrored from mannatthemes.com/dastone/default/auth-login.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 15 Oct 2021 12:05:15 GMT -->
 <head>
         <meta charset="utf-8" />
         <title>Dastone - Admin & Dashboard Template</title>
@@ -13,12 +13,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
         <!-- App favicon -->
-        <link rel="shortcut icon" href="/images/favicon.ico">
+        <link rel="shortcut icon" href="assets/images/favicon.ico">
 
         <!-- App css -->
-        <link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-        <link href="/css/icons.min.css" rel="stylesheet" type="text/css" />
-        <link href="/css/app.min.css" rel="stylesheet" type="text/css" />
+        <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+        <link href="assets/css/icons.min.css" rel="stylesheet" type="text/css" />
+        <link href="assets/css/app.min.css" rel="stylesheet" type="text/css" />
 
     </head>
 
@@ -34,7 +34,7 @@
                                 <div class="card-body p-0 auth-header-box">
                                     <div class="text-center p-3">
                                         <a href="index.html" class="logo logo-admin">
-                                            <img src="/images/logo-sm-dark.png" height="50" alt="logo" class="auth-logo">
+                                            <img src="assets/images/logo-sm-dark.png" height="50" alt="logo" class="auth-logo">
                                         </a>
                                         <h4 class="mt-3 mb-1 fw-semibold text-white font-18">Let's Get Started Dastone</h4>   
                                         <p class="text-muted  mb-0">Sign in to continue to Dastone.</p>  
@@ -43,15 +43,15 @@
                                 <div class="card-body p-0">
                                     <ul class="nav-border nav nav-pills" role="tablist">
                                         <li class="nav-item">
-                                            <a class="nav-link fw-semibold" data-bs-toggle="tab" href="#LogIn_Tab" role="tab">Log In</a>
+                                            <a class="nav-link active fw-semibold" data-bs-toggle="tab" href="#LogIn_Tab" role="tab">Log In</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link active fw-semibold" data-bs-toggle="tab" href="#Register_Tab" role="tab">Register</a>
+                                            <a class="nav-link fw-semibold" data-bs-toggle="tab" href="#Register_Tab" role="tab">Register</a>
                                         </li>
                                     </ul>
                                      <!-- Tab panes -->
                                     <div class="tab-content">
-                                        <div class="tab-pane p-3" id="LogIn_Tab" role="tabpanel">                                        
+                                        <div class="tab-pane active p-3" id="LogIn_Tab" role="tabpanel">                                        
                                             <form class="form-horizontal auth-form" action="https://mannatthemes.com/dastone/default/index.html">
                 
                                                 <div class="form-group mb-2">
@@ -98,7 +98,7 @@
                                                 <button type="button" class="btn btn-sm btn-outline-secondary">Google</button>
                                             </div>
                                         </div>
-                                        <div class="tab-pane active px-3 pt-3" id="Register_Tab" role="tabpanel">
+                                        <div class="tab-pane px-3 pt-3" id="Register_Tab" role="tabpanel">
                                             <form class="form-horizontal auth-form" action="https://mannatthemes.com/dastone/default/index.html">
             
                                                 <div class="form-group mb-2">
@@ -172,15 +172,15 @@
 
 
         <!-- jQuery  -->
-        <script src="/js/jquery.min.js"></script>
-        <script src="/js/bootstrap.bundle.min.js"></script>
-        <script src="/js/waves.js"></script>
-        <script src="/js/feather.min.js"></script>
-        <script src="/js/simplebar.min.js"></script>
+        <script src="assets/js/jquery.min.js"></script>
+        <script src="assets/js/bootstrap.bundle.min.js"></script>
+        <script src="assets/js/waves.js"></script>
+        <script src="assets/js/feather.min.js"></script>
+        <script src="assets/js/simplebar.min.js"></script>
 
         
     </body>
 
 
-<!-- Mirrored from mannatthemes.com/dastone/default/auth-register.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 15 Oct 2021 12:05:33 GMT -->
+<!-- Mirrored from mannatthemes.com/dastone/default/auth-login.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 15 Oct 2021 12:05:33 GMT -->
 </html>
