--- a/views/user/auth-login.html
+++ b/views/user/auth-login.html
@@ -13,12 +13,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
         <!-- App favicon -->
-        <link rel="shortcut icon" href="assets/images/favicon.ico">
+        <link rel="shortcut icon" href="/images/favicon.ico">
 
         <!-- App css -->
-        <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-        <link href="assets/css/icons.min.css" rel="stylesheet" type="text/css" />
-        <link href="assets/css/app.min.css" rel="stylesheet" type="text/css" />
+        <link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+        <link href="/css/icons.min.css" rel="stylesheet" type="text/css" />
+        <link href="/css/app.min.css" rel="stylesheet" type="text/css" />
 
     </head>
 
@@ -34,7 +34,7 @@
                                 <div class="card-body p-0 auth-header-box">
                                     <div class="text-center p-3">
                                         <a href="index.html" class="logo logo-admin">
-                                            <img src="assets/images/logo-sm-dark.png" height="50" alt="logo" class="auth-logo">
+                                            <img src="/images/logo-sm-dark.png" height="50" alt="logo" class="auth-logo">
                                         </a>
                                         <h4 class="mt-3 mb-1 fw-semibold text-white font-18">Let's Get Started Dastone</h4>   
                                         <p class="text-muted  mb-0">Sign in to continue to Dastone.</p>  
@@ -52,19 +52,19 @@
                                      <!-- Tab panes -->
                                     <div class="tab-content">
                                         <div class="tab-pane active p-3" id="LogIn_Tab" role="tabpanel">                                        
-                                            <form class="form-horizontal auth-form" action="https://mannatthemes.com/dastone/default/index.html">
+                                            <form class="form-horizontal auth-form" action="/user/auth/login" method="POST">
                 
                                                 <div class="form-group mb-2">
                                                     <label class="form-label" for="username">Username</label>
                                                     <div class="input-group">                                                                                         
-                                                        <input type="text" class="form-control" name="username" id="username" placeholder="Enter username">
+                                                        <input type="text" class="form-control" required name="username" id="username" placeholder="Enter username">
                                                     </div>                                    
                                                 </div><!--end form-group--> 
                     
                                                 <div class="form-group mb-2">
                                                     <label class="form-label" for="userpassword">Password</label>                                            
                                                     <div class="input-group">                                  
-                                                        <input type="password" class="form-control" name="password" id="userpassword" placeholder="Enter password">
+                                                        <input type="password" class="form-control" required name="password" id="userpassword" placeholder="Enter password">
                                                     </div>                               
                                                 </div><!--end form-group--> 
                     
@@ -82,7 +82,7 @@
                     
                                                 <div class="form-group mb-0 row">
                                                     <div class="col-12">
-                                                        <button class="btn btn-primary w-100 waves-effect waves-light" type="button">Log In <i class="fas fa-sign-in-alt ms-1"></i></button>
+                                                        <button class="btn btn-primary w-100 waves-effect waves-light" type="submit">Log In <i class="fas fa-sign-in-alt ms-1"></i></button>
                                                     </div><!--end col--> 
                                                 </div> <!--end form-group-->                           
                                             </form><!--end form-->
@@ -99,12 +99,12 @@
                                             </div>
                                         </div>
                                         <div class="tab-pane px-3 pt-3" id="Register_Tab" role="tabpanel">
-                                            <form class="form-horizontal auth-form" action="https://mannatthemes.com/dastone/default/index.html">
+                                            <form class="form-horizontal auth-form"  action="/user/auth-register" method="POST">
             
                                                 <div class="form-group mb-2">
                                                     <label class="form-label" for="username">Username</label>
                                                     <div class="input-group">                                                                                         
-                                                        <input type="text" class="form-control" name="username" id="username" placeholder="Enter username">
+                                                        <input type="text" class="form-control" required name="username" id="username" placeholder="Enter username">
                                                     </div>                                    
                                                 </div><!--end form-group--> 
             
@@ -118,7 +118,7 @@
                                                 <div class="form-group mb-2">
                                                     <label class="form-label" for="userpassword">Password</label>                                            
                                                     <div class="input-group">                                  
-                                                        <input type="password" class="form-control" name="password" id="userpassword" placeholder="Enter password">
+                                                        <input type="password" class="form-control" required name="password" id="userpassword" placeholder="Enter password">
                                                     </div>                               
                                                 </div><!--end form-group--> 
             
@@ -132,7 +132,7 @@
                                                 <div class="form-group mb-2">
                                                     <label class="form-label" for="mo_number">Mobile Number</label>                                            
                                                     <div class="input-group">                                 
-                                                        <input type="text" class="form-control" name="mobile number" id="mo_number" placeholder="Enter Mobile Number">
+                                                        <input type="text" class="form-control" name="mobile_number" id="mo_number" required minlength="9" maxlength="10" id="mo_number" placeholder="Enter Mobile Number">
                                                     </div>                               
                                                 </div><!--end form-group-->  
                     
@@ -147,7 +147,7 @@
                     
                                                 <div class="form-group mb-0 row">
                                                     <div class="col-12">
-                                                        <button class="btn btn-primary w-100 waves-effect waves-light" type="button">Register <i class="fas fa-sign-in-alt ms-1"></i></button>
+                                                        <button class="btn btn-primary w-100 waves-effect waves-light" type="submit">Register <i class="fas fa-sign-in-alt ms-1"></i></button>
                                                     </div><!--end col--> 
                                                 </div> <!--end form-group-->                           
                                             </form><!--end form-->
@@ -172,11 +172,11 @@
 
 
         <!-- jQuery  -->
-        <script src="assets/js/jquery.min.js"></script>
-        <script src="assets/js/bootstrap.bundle.min.js"></script>
-        <script src="assets/js/waves.js"></script>
-        <script src="assets/js/feather.min.js"></script>
-        <script src="assets/js/simplebar.min.js"></script>
+        <script src="/js/jquery.min.js"></script>
+        <script src="/js/bootstrap.bundle.min.js"></script>
+        <script src="/js/waves.js"></script>
+        <script src="/js/feather.min.js"></script>
+        <script src="/js/simplebar.min.js"></script>
 
         
     </body>
