--- a/views/user/auth-recover-pw.html
+++ b/views/user/auth-recover-pw.html
@@ -13,12 +13,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
         <!-- App favicon -->
-        <link rel="shortcut icon" href="assets/images/favicon.ico">
+        <link rel="shortcut icon" href="/images/favicon.ico">
 
         <!-- App css -->
-        <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-        <link href="assets/css/icons.min.css" rel="stylesheet" type="text/css" />
-        <link href="assets/css/app.min.css" rel="stylesheet" type="text/css" />
+        <link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+        <link href="/css/icons.min.css" rel="stylesheet" type="text/css" />
+        <link href="/css/app.min.css" rel="stylesheet" type="text/css" />
 
     </head>
 
@@ -34,7 +34,7 @@
                                 <div class="card-body p-0 auth-header-box">
                                     <div class="text-center p-3">
                                         <a href="index.html" class="logo logo-admin">
-                                            <img src="assets/images/logo-sm-dark.png" height="50" alt="logo" class="auth-logo">
+                                            <img src="/images/logo-sm-dark.png" height="50" alt="logo" class="auth-logo">
                                         </a>
                                         <h4 class="mt-3 mb-1 fw-semibold text-white font-18">Reset Password For Dastone</h4>   
                                         <p class="text-muted  mb-0">Enter your Email and instructions will be sent to you!</p>  
@@ -74,11 +74,11 @@
 
 
         <!-- jQuery  -->
-        <script src="assets/js/jquery.min.js"></script>
-        <script src="assets/js/bootstrap.bundle.min.js"></script>
-        <script src="assets/js/waves.js"></script>
-        <script src="assets/js/feather.min.js"></script>
-        <script src="assets/js/simplebar.min.js"></script>
+        <script src="/js/jquery.min.js"></script>
+        <script src="/js/bootstrap.bundle.min.js"></script>
+        <script src="/js/waves.js"></script>
+        <script src="/js/feather.min.js"></script>
+        <script src="/js/simplebar.min.js"></script>
 
         
     </body>
