auth issues bruh

--- a/views/sales-index.html
+++ b/views/sales-index.html
@@ -13,14 +13,14 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
         <!-- App favicon -->
-        <link rel="shortcut icon" href="assets/images/favicon.ico">
+        <link rel="shortcut icon" href="/images/favicon.ico">
 
         <!-- App css -->
-        <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-        <link href="assets/css/icons.min.css" rel="stylesheet" type="text/css" />
-        <link href="assets/css/metisMenu.min.css" rel="stylesheet" type="text/css" />
+        <link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+        <link href="/css/icons.min.css" rel="stylesheet" type="text/css" />
+        <link href="/css/metisMenu.min.css" rel="stylesheet" type="text/css" />
         <link href="https://mannatthemes.com/dastone/plugins/daterangepicker/daterangepicker.css" rel="stylesheet" type="text/css" />
-        <link href="assets/css/app.min.css" rel="stylesheet" type="text/css" />
+        <link href="/css/app.min.css" rel="stylesheet" type="text/css" />
 
     </head>
 
@@ -31,11 +31,11 @@
             <div class="brand">
                 <a href="index.html" class="logo">
                     <span>
-                        <img src="assets/images/logo-sm.png" alt="logo-small" class="logo-sm">
+                        <img src="/images/logo-sm.png" alt="logo-small" class="logo-sm">
                     </span>
                     <span>
-                        <img src="assets/images/logo.png" alt="logo-large" class="logo-lg logo-light">
-                        <img src="assets/images/logo-dark.png" alt="logo-large" class="logo-lg logo-dark">
+                        <img src="/images/logo.png" alt="logo-large" class="logo-lg logo-light">
+                        <img src="/images/logo-dark.png" alt="logo-large" class="logo-lg logo-dark">
                     </span>
                 </a>
             </div>
@@ -302,7 +302,7 @@
                                         <small class="float-end text-muted ps-2">10 min ago</small>
                                         <div class="media">
                                             <div class="avatar-md bg-soft-primary">
-                                                <img src="assets/images/users/user-4.jpg" alt="" class="thumb-sm rounded-circle">
+                                                <img src="/images/users/user-4.jpg" alt="" class="thumb-sm rounded-circle">
                                             </div>
                                             <div class="media-body align-self-center ms-2 text-truncate">
                                                 <h6 class="my-0 fw-normal text-dark">Meeting with designers</h6>
@@ -328,7 +328,7 @@
                                         <small class="float-end text-muted ps-2">1 hr ago</small>
                                         <div class="media">
                                             <div class="avatar-md bg-soft-primary">
-                                                <img src="assets/images/users/user-5.jpg" alt="" class="thumb-sm rounded-circle">
+                                                <img src="/images/users/user-5.jpg" alt="" class="thumb-sm rounded-circle">
                                             </div>
                                             <div class="media-body align-self-center ms-2 text-truncate">
                                                 <h6 class="my-0 fw-normal text-dark">Your order is placed</h6>
@@ -361,13 +361,13 @@
                             <a class="nav-link dropdown-toggle waves-effect waves-light nav-user" data-bs-toggle="dropdown" href="#" role="button"
                                 aria-haspopup="false" aria-expanded="false">
                                 <span class="ms-1 nav-user-name hidden-sm">Nick</span>
-                                <img src="assets/images/users/user-5.jpg" alt="profile-user" class="rounded-circle thumb-xs" />                                 
+                                <img src="/images/users/user-5.jpg" alt="profile-user" class="rounded-circle thumb-xs" />                                 
                             </a>
                             <div class="dropdown-menu dropdown-menu-end">
                                 <a class="dropdown-item" href="#"><i data-feather="user" class="align-self-center icon-xs icon-dual me-1"></i> Profile</a>
                                 <a class="dropdown-item" href="#"><i data-feather="settings" class="align-self-center icon-xs icon-dual me-1"></i> Settings</a>
                                 <div class="dropdown-divider mb-0"></div>
-                                <a class="dropdown-item" href="#"><i data-feather="power" class="align-self-center icon-xs icon-dual me-1"></i> Logout</a>
+                                <a class="dropdown-item" href="/user/logout"><i data-feather="power" class="align-self-center icon-xs icon-dual me-1"></i> Logout</a>
                             </div>
                         </li>
                     </ul><!--end topbar-nav-->
@@ -507,7 +507,7 @@
                                     <div class="row">
                                         <div class="col">
                                             <div class="media">
-                                                <img src="assets/images/money-beg.png" alt="" class="align-self-center" height="40">
+                                                <img src="/images/money-beg.png" alt="" class="align-self-center" height="40">
                                                 <div class="media-body align-self-center ms-3"> 
                                                     <h6 class="m-0 font-20">$1850.00</h6>
                                                     <p class="text-muted mb-0">Total Revenue</p>                                                                                                                                               
@@ -652,7 +652,7 @@
                                                 <tr>                                                        
                                                     <td>
                                                         <div class="media">
-                                                            <img src="assets/images/products/01.png" height="30" class="me-3 align-self-center rounded" alt="...">
+                                                            <img src="/images/products/01.png" height="30" class="me-3 align-self-center rounded" alt="...">
                                                             <div class="media-body align-self-center"> 
                                                                 <h6 class="m-0">Dastone Camera EDM 5D(White)</h6>
                                                                 <a href="#" class="font-12 text-primary">ID: A3652</a>                                                                                           
@@ -670,7 +670,7 @@
                                                 <tr>                                                        
                                                     <td>
                                                         <div class="media">
-                                                            <img src="assets/images/products/02.png" height="30" class="me-3 align-self-center rounded" alt="...">
+                                                            <img src="/images/products/02.png" height="30" class="me-3 align-self-center rounded" alt="...">
                                                             <div class="media-body align-self-center"> 
                                                                 <h6 class="m-0">Dastone Shoes Max-Zon</h6>
                                                                 <a href="#" class="font-12 text-primary">ID: A5002</a>                                                                                          
@@ -688,7 +688,7 @@
                                                 <tr>                                                        
                                                     <td>
                                                         <div class="media">
-                                                            <img src="assets/images/products/04.png" height="30" class="me-3 align-self-center rounded" alt="...">
+                                                            <img src="/images/products/04.png" height="30" class="me-3 align-self-center rounded" alt="...">
                                                             <div class="media-body align-self-center"> 
                                                                 <h6 class="m-0">Dastone Mask N99 [ISI]</h6>
                                                                 <a href="#" class="font-12 text-primary">ID: A6598</a>                                                                                           
@@ -706,7 +706,7 @@
                                                 <tr>                                                        
                                                     <td>
                                                         <div class="media">
-                                                            <img src="assets/images/products/img-5.png" height="30" class="me-3 align-self-center rounded" alt="...">
+                                                            <img src="/images/products/img-5.png" height="30" class="me-3 align-self-center rounded" alt="...">
                                                             <div class="media-body align-self-center"> 
                                                                 <h6 class="m-0">Dastone Bag (Blue)</h6>
                                                                 <a href="#" class="font-12 text-primary">ID: A9547</a>                                                                                            
@@ -747,20 +747,20 @@
 
 
         <!-- jQuery  -->
-        <script src="assets/js/jquery.min.js"></script>
-        <script src="assets/js/bootstrap.bundle.min.js"></script>
-        <script src="assets/js/metismenu.min.js"></script>
-        <script src="assets/js/waves.js"></script>
-        <script src="assets/js/feather.min.js"></script>
-        <script src="assets/js/simplebar.min.js"></script>
-        <script src="assets/js/moment.js"></script>
+        <script src="/js/jquery.min.js"></script>
+        <script src="/js/bootstrap.bundle.min.js"></script>
+        <script src="/js/metismenu.min.js"></script>
+        <script src="/js/waves.js"></script>
+        <script src="/js/feather.min.js"></script>
+        <script src="/js/simplebar.min.js"></script>
+        <script src="/js/moment.js"></script>
         <script src="https://mannatthemes.com/dastone/plugins/daterangepicker/daterangepicker.js"></script>
 
         <script src="https://mannatthemes.com/dastone/plugins/apex-charts/apexcharts.min.js"></script>
-        <script src="assets/pages/jquery.sales_dashboard.init.js"></script>
+        <script src="/pages/jquery.sales_dashboard.init.js"></script>
 
         <!-- App js -->
-        <script src="assets/js/app.js"></script>
+        <script src="/js/app.js"></script>
         
     </body>
 
