--- a/views/sales-index.html
+++ b/views/sales-index.html
@@ -29,7 +29,7 @@
         <div class="left-sidenav">
             <!-- LOGO -->
             <div class="brand">
-                <a href="index.html" class="logo">
+                <a href="/" class="logo">
                     <span>
                         <img src="/images/logo-sm.png" alt="logo-small" class="logo-sm">
                     </span>
@@ -46,8 +46,8 @@
                     <li>
                         <a href="javascript: void(0);"> <i data-feather="home" class="align-self-center menu-icon"></i><span>Dashboard</span><span class="menu-arrow"><i class="mdi mdi-chevron-right"></i></span></a>
                         <ul class="nav-second-level" aria-expanded="false">
-                            <li class="nav-item"><a class="nav-link" href="index.html"><i class="ti-control-record"></i>Analytics</a></li>
-                            <li class="nav-item"><a class="nav-link" href="sales-index.html"><i class="ti-control-record"></i>Sales</a></li> 
+                            <li class="nav-item"><a class="nav-link" href="/"><i class="ti-control-record"></i>Analytics</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/"><i class="ti-control-record"></i>Sales</a></li> 
                         </ul>
                     </li>
     
