--- a/views/user/auth-lock-screen.html
+++ b/views/user/auth-lock-screen.html
@@ -33,7 +33,7 @@
                             <div class="card">
                                 <div class="card-body p-0 auth-header-box">
                                     <div class="text-center p-3">
-                                        <a href="index.html" class="logo logo-admin">
+                                        <a href="/" class="logo logo-admin">
                                             <img src="/images/logo-sm-dark.png" height="50" alt="logo" class="auth-logo">
                                         </a>
                                         <h4 class="mt-3 mb-1 fw-semibold text-white font-18">Enter Password And Use Dastone</h4>   
