--- a/views/user/auth-login.html
+++ b/views/user/auth-login.html
@@ -76,7 +76,7 @@
                                                         </div>
                                                     </div><!--end col--> 
                                                     <div class="col-sm-6 text-end">
-                                                        <a href="auth-recover-pw.html" class="text-muted font-13"><i class="dripicons-lock"></i> Forgot password?</a>                                    
+                                                        <a href="/user/auth-recover-pw" class="text-muted font-13"><i class="dripicons-lock"></i> Forgot password?</a>                                    
                                                     </div><!--end col--> 
                                                 </div><!--end form-group--> 
                     
