--- a/views/user/auth-recover-pw.html
+++ b/views/user/auth-recover-pw.html
@@ -55,7 +55,7 @@
                                             </div><!--end col--> 
                                         </div> <!--end form-group-->                           
                                     </form><!--end form-->
-                                    <p class="text-muted mb-0 mt-3">Remember It ?  <a href="auth-register.html" class="text-primary ms-2">Sign in here</a></p>
+                                    <p class="text-muted mb-0 mt-3">Remember It ?  <a href="/user/auth/login" class="text-primary ms-2">Sign in here</a></p>
                                 </div>
                                 <div class="card-body bg-light-alt text-center">
                                     <span class="text-muted d-none d-sm-inline-block">Mannatthemes © <script>
