--- a/views/user/auth-lock-screen.html
+++ b/views/user/auth-lock-screen.html
@@ -37,7 +37,7 @@
                                             <img src="/images/logo-sm-dark.png" height="50" alt="logo" class="auth-logo">
                                         </a>
                                         <h4 class="mt-3 mb-1 fw-semibold text-white font-18">Enter Password And Use Dastone</h4>   
-                                        <p class="text-muted  mb-0">Hello Mark, enter your password to unlock the screen !</p>  
+                                        <p class="text-muted  mb-0">Hello <%= username %>,  enter your password to unlock the screen !</p>  
                                     </div>
                                 </div>
                                 <div class="card-body">
