--- a/views/sales-index.html
+++ b/views/sales-index.html
@@ -97,7 +97,7 @@
                             <li class="nav-item"><a class="nav-link" href="auth-login.html"><i class="ti-control-record"></i>Log in</a></li>
                             <li class="nav-item"><a class="nav-link" href="auth-register.html"><i class="ti-control-record"></i>Register</a></li>
                             <li class="nav-item"><a class="nav-link" href="/user/auth-recover-pw"><i class="ti-control-record"></i>Recover Password</a></li>
-                            <li class="nav-item"><a class="nav-link" href="auth-lock-screen.html"><i class="ti-control-record"></i>Lock Screen</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/user/auth-lock-screen"><i class="ti-control-record"></i>Lock Screen</a></li>
                             <li class="nav-item"><a class="nav-link" href="auth-404.html"><i class="ti-control-record"></i>Error 404</a></li>
                             <li class="nav-item"><a class="nav-link" href="auth-500.html"><i class="ti-control-record"></i>Error 500</a></li>
                         </ul>
